k8s/apps/tekton-operator/tekton-operator/app/route.yaml
# yaml-language-server: $schema=https://k8s-schemas-jnobrega.pages.dev/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: tekton-dashboard
  namespace: tekton-operator
spec:
  hostnames:
  - tekton.jnobrega.com
  parentRefs:
  - group: gateway.networking.k8s.io
    kind: Gateway
    name: internal
    namespace: network
    sectionName: websecure
  rules:
  - backendRefs:
    - name: tekton-dashboard
      port: 9097
      weight: 1
    matches:
    - path:
        type: PathPrefix
        value: /
